Adicionado Gráfico na homepage

--- a/criacao/templates/home.html
+++ b/criacao/templates/home.html
@@ -1,3 +1,6 @@
 <body>
-    Bem-Vindo
+    Bem-Vindo<br><br>
+    <div style="height :500px; width: 80%">
+        {{graph | safe}}
+    </div> 
 </body>
