--- a/criacao/templates/cabecaslist.html
+++ b/criacao/templates/cabecaslist.html
@@ -22,8 +22,8 @@
             {% if order_by_selected %}
             <option value={{order_by_selected}} selected>{{order_by_text}}</option>
             {% endif %}
-            <option value="maisnovo" >Mais novo</option>
-            <option value="maisvelho" >Mais velho</option>
+            <option value="maisnovo" >Idade - Mais novo</option>
+            <option value="maisvelho" >Idade - Mais velho</option>
             <option value="crescente" >Brinco - Crescente</option>
             <option value="decrescente" >Brinco - Decrescente</option>
         </select>   
@@ -32,7 +32,7 @@
     </form>
 
     {% for cabeca in cabecas %}
-     <b>{{cabeca.tipo}} - {{cabeca.sexo}} - Brinco: </b><a href= "">{{cabeca.n_etiqueta}}/{{cabeca.brinco.cor_nome}}</a> - Nascimento: {{cabeca.nascimento}}<br>
+     <b>{{cabeca.tipo}} - {{cabeca.sexo}} - Brinco: </b><a href= "">{{cabeca.n_etiqueta}}/{{cabeca.brinco.cor_nome}}</a> - Idade: {{cabeca.idade}}<br>
     {% endfor %}
 
    
