--- a/criacao/templates/transacoesDetail.html
+++ b/criacao/templates/transacoesDetail.html
@@ -1,7 +1,8 @@
 <body>
     <h1>Transação: #{{id}}</h1>
     <p>Data da transação: {{data}}</p>
-    <p>Valor da transação: R${{valor}},00</p>
+    <p>Valor da transação: R${{valor}}</p>
     <p>Tipo da transação: {{tipo}}</p>
     <p>Envolvido na transação: {{envolvido}}</p>
+    <p>Cabeças de gado: {{tags}}</p>
 </body>
