--- a/criacao/templates/cabecacreate.html
+++ b/criacao/templates/cabecacreate.html
@@ -15,6 +15,9 @@
         <input type="hidden" name="tipo" value="{{ tipo }}">
         {{ form.as_p }}
         {{ form_.as_p }}
+        <b>Vacinas:</b>
+        {{ form_vac.as_p }}
+        {{ form_pesos.as_p}}
         <input type="submit" value="Save">
     </form>
 </body>
