--- a/criacao/templates/transacoesDetail.html
+++ b/criacao/templates/transacoesDetail.html
@@ -5,4 +5,7 @@
     <p>Tipo da transação: {{tipo}}</p>
     <p>Envolvido na transação: {{envolvido}}</p>
     <p>Cabeças de gado: {{tags}}</p>
+    <a href="{% url 'transacoes' %}">Editar</a>
+    <a href="{% url 'transacoes' %}">Voltar</a>
+    <a href="{% url 'home' %}">Home</a>
 </body>
