--- a/criacao/templates/detailview.html
+++ b/criacao/templates/detailview.html
@@ -31,4 +31,6 @@
         <h3>Observações: </h3>
         <br>
         {{observacoes}}
+        <BR>
+        <a href="{% url 'list' %}">Voltar</a>
 </body>
