--- a/criacao/templates/transacoesCreate.html
+++ b/criacao/templates/transacoesCreate.html
@@ -6,4 +6,6 @@
         {{ form.as_p }}
         <input type="submit" value="Save">
     </form>
+    <a href="{% url 'transacoes' %}">Voltar</a>
+    <a href="{% url 'home' %}">Home</a>
 </body>
