Adicionar rotemamento e corrigir impressão de gestações para vacas em detailview

--- a/criacao/templates/cabecacreate.html
+++ b/criacao/templates/cabecacreate.html
@@ -20,4 +20,6 @@
         {{ form_pesos.as_p}}
         <input type="submit" value="Save">
     </form>
+    <a href="{% url 'cabecas' %}">Voltar</a>
+    <a href="{% url 'home' %}">Home</a>
 </body>
