--- a/criacao/templates/transacoesEdit.html
+++ b/criacao/templates/transacoesEdit.html
@@ -6,6 +6,6 @@
         {{ form.as_p }}
         <input type="submit" value="Save">
     </form>
-    <a href="transacoes/{{id}}/view">Voltar</a>
+    <a href="/transacao/{{id}}/view">Voltar</a>
     <a href="{% url 'home' %}">Home</a>
 </body>
