Adicionar link do editView no detailview

--- a/criacao/templates/detailview.html
+++ b/criacao/templates/detailview.html
@@ -38,6 +38,7 @@
         <br>
         {{observacoes}}
         <BR>
+            <a href="/cabeca/{{id}}/edit">Editar</a>
         <a href="{% url 'cabecas' %}">Voltar</a>
         <a href="{% url 'home' %}">home</a>
         
