--- a/criacao/templates/login.html
+++ b/criacao/templates/login.html
@@ -2,8 +2,9 @@
 <head>
     <title>Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1305bc1926.js" crossorigin="anonymous"></script>
 </head>
 <style>
     body {
@@ -19,7 +20,7 @@
     background-color: #FFFFFF;
     padding:1.8rem;
     padding-top:0;
-    
+
     border-radius: 8px;
 }
 
@@ -51,7 +52,7 @@ letter-spacing: -0.24px;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
-    
+
 }
 
 .spacing{
@@ -101,7 +102,7 @@ letter-spacing: -0.24px;
             <div class="spacing"></div>
             <div class="form-group" style="height: 50px;">
                 <div style="height: 10px;"></div>
-                <label class="field-label">Senha:</label><br>
+                <label class="field-label">Senha</label><br>
                 <input type="password" class="form-field" name="password" required>
             </div>
             <div class="spacing"></div>
@@ -109,10 +110,10 @@ letter-spacing: -0.24px;
             <div class="spacing"></div>
                 <div class="form-group">
                     <div style="height: 30px;"></div>
-                    <button type="submit" class="field-button"  onclick="load()" ><h2 class="button-text">Entrar</h2></button>
+                    <button type="submit" class="field-button"  onclick="load()" ><h2 class="button-text">Entrar <i class="fas fa-baseball-ball"></i></h2></button>
                 </div>
-            
-        
+
+
     </div>
 </div>
 </body>
